--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,7 +106,6 @@ section.row {
     font-size: 19px;
     font-style: normal;
     font-weight: 600;
-    line-height: 204.3%;
 }
 
 #contact-us-button {
@@ -121,7 +120,7 @@ section.row {
     color: #ffffff;
 }
 
-button {
+.btn-rounded {
     appearance: none;
     outline: none;
     border: none;
@@ -130,6 +129,18 @@ button {
     padding: 15px 40px;
     font-size: 18px;
     border-radius: 28px;
+    margin: 5px;
+}
+
+.btn-flat{
+    appearance: none;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    text-decoration: none;
+    padding: 15px 40px;
+    font-size: 18px;
+    border-radius: 8px;
     margin: 5px;
 }
 
@@ -168,6 +179,10 @@ button {
 
 .bg-red {
     background: #FFE5DA;
+}
+
+.bg-white{
+    background: white;
 }
 
 .row-flex {
@@ -257,7 +272,8 @@ p {
     font-size: 18px;
     font-style: normal;
     font-weight: 600;
-    line-height: 204.3%;
+    margin-top: 9px;
+    margin-bottom: 9px;
 }
 
 .justify-col {
@@ -372,4 +388,48 @@ p {
     .hero>h1 {
         font-size: 30px;
     }
+}
+
+section {
+    background-color: #E8F4FA;
+}
+
+section .container {
+    padding-top: 120px;
+    padding-bottom: 120px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+section .container p {
+    color: #252525;
+    text-align: center;
+    font-family: "Poppins", sans-serif;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 600;
+    width: 100%;
+}
+
+#lastP {
+    padding-bottom: 40px;
+}
+
+section .container input {
+    width: 532px;
+    height: 50px;
+    border: none;
+    border-radius: 8px;
+    margin-right: 10px;
+    padding-left: 30px;
+}
+
+.btn-dark{
+    background-color: #252525;
+    color: #ffffff;
+}
+
+.m-0{
+    margin: 0;
 }
